REGRESSION (r99924): broke 2 pasteboard tests on GTK https://bugs.webkit.org/show_bug.cgi?id=72131

Reviewed by Tony Chang.

Source/WebCore:

* platform/gtk/ClipboardGtk.cpp:
(WebCore::ClipboardGtk::clearData): Call clearAll now.
(WebCore::ClipboardGtk::clearAllData): Call clearAllExceptFilenames now.
* platform/gtk/DataObjectGtk.cpp:
(WebCore::DataObjectGtk::clearAllExceptFilenames): Renamed from clear.
(WebCore::DataObjectGtk::clearAll): Added this method which also clear filenames.
* platform/gtk/DataObjectGtk.h:
* platform/gtk/PasteboardGtk.cpp: Call clear before setting new clipboard data.
(WebCore::Pasteboard::writeSelection): Ditto.
(WebCore::Pasteboard::writePlainText): Ditto.
(WebCore::Pasteboard::writeURL): Ditto.
(WebCore::Pasteboard::writeImage): Ditto.
* platform/gtk/PasteboardHelper.cpp:
(WebCore::clearClipboardContentsCallback): Use the clearAll method now.

Source/WebKit/gtk:

* WebCoreSupport/EditorClientGtk.cpp:
(WebKit::setSelectionPrimaryClipboardIfNeeded): Use the new clearAll method.

LayoutTests:

* platform/gtk/Skipped: Unskip passing tests.

Canonical link: https://commits.webkit.org/89307@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@100817 268f45cc-cd09-0410-ab3c-d52691b4dbfc